--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ساحة التحديات - النسخة المحسنة</title>
+    <title>ساحة التحديات - النسخة الكاملة</title>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -675,6 +675,111 @@
             playClickSound();
         });
 
+        document.getElementById('completeChallengeBtn').addEventListener('click', () => {
+            handleChallengeCompletion(true);
+        });
+
+        document.getElementById('skipChallengeBtn').addEventListener('click', () => {
+            handleChallengeCompletion(false);
+        });
+
+        document.getElementById('punishmentBtn').addEventListener('click', () => {
+            handlePunishment();
+        });
+
+        function handleChallengeCompletion(completed) {
+            if (completed) {
+                const challengeCard = document.getElementById('challengeCard');
+                const isGold = challengeCard.innerHTML.includes('⭐');
+                let pointsEarned = 0;
+
+                if (isGold) {
+                    players[currentPlayerIndex].points += 15;
+                    mainPlayerPoints += 2;
+                    pointsEarned = 15;
+                } else {
+                    players[currentPlayerIndex].points += 1;
+                    mainPlayerPoints += 2;
+                    pointsEarned = 1;
+                }
+
+                showRewardBubble(pointsEarned);
+                nextTurn();
+                updateCurrentPlayerInfo();
+                checkLevelUp();
+            } else {
+                if (players[currentPlayerIndex].points >= 50) {
+                    players[currentPlayerIndex].points -= 50;
+                    nextTurn();
+                    updateCurrentPlayerInfo();
+                    checkLevelUp();
+                } else {
+                    alert("لا يمكنك تخطي التحدي! ليس لديك نقاط كافية.");
+                }
+            }
+        }
+
+        function handlePunishment() {
+            if (players[currentPlayerIndex].points >= 5) {
+                players[currentPlayerIndex].points -= 5;
+            } else {
+                players[currentPlayerIndex].points = 0;
+            }
+
+            const punishment = punishments[Math.floor(Math.random() * punishments.length)];
+            alert(`😈 عقابك هو:\n${punishment}\nنفذه الآن!`);
+
+            setTimeout(() => {
+                const reward = generatePunishmentReward();
+                players[currentPlayerIndex].points += reward;
+                showRewardBubble(reward);
+
+                nextTurn();
+                updateCurrentPlayerInfo();
+                checkLevelUp();
+            }, 2000);
+        }
+
+        function generatePunishmentReward() {
+            const rand = Math.random();
+            if (rand < 0.005) return 100; // 0.5% فرصة
+            if (rand < 0.015) return 50;  // 1% فرصة
+            if (rand < 0.035) return 20;  // 2% فرصة
+            if (rand < 0.065) return 10;  // 3% فرصة
+            if (rand < 0.115) return 5;   // 5% فرصة
+            if (rand < 0.195) return 4;   // 8% فرصة
+            if (rand < 0.295) return 3;   // 10% فرصة
+            if (rand < 0.495) return 2;   // 20% فرصة
+            return 1; // 50% فرصة
+        }
+
+        function showRewardBubble(points) {
+            const bubble = document.createElement('div');
+            bubble.textContent = `+${points} نقطة`;
+            bubble.style.position = 'fixed';
+            bubble.style.top = (Math.random() * 50 + 25) + '%';
+            bubble.style.left = (Math.random() * 50 + 25) + '%';
+            bubble.style.background = 'rgba(255, 215, 0, 0.9)';
+            bubble.style.color = '#000';
+            bubble.style.padding = '10px 20px';
+            bubble.style.borderRadius = '20px';
+            bubble.style.fontSize = '20px';
+            bubble.style.boxShadow = '0 0 10px gold';
+            bubble.style.zIndex = '1000';
+            bubble.style.opacity = '1';
+            bubble.style.transition = 'all 1s ease-out';
+            document.body.appendChild(bubble);
+
+            setTimeout(() => {
+                bubble.style.transform = 'scale(1.5)';
+                bubble.style.opacity = '0';
+            }, 100);
+
+            setTimeout(() => {
+                bubble.remove();
+            }, 1200);
+        }
+
         function toggleChallengeButtons(show) {
             document.getElementById('nextChallengeBtn').classList.toggle('hidden', show);
             document.getElementById('completeChallengeBtn').classList.toggle('hidden', !show);
@@ -748,6 +853,145 @@
             
             document.getElementById('challengeCard').textContent = "انقر على 'التحدي التالي' للبدء!";
             toggleChallengeButtons(false);
+        }
+
+        function checkLevelUp() {
+            const totalPoints = players.reduce((sum, player) => sum + player.points, 0);
+
+            if (totalPoints >= 150 && currentLevel === 1) {
+                setTimeout(() => {
+                    if (confirm("مجموع نقاط كل اللاعبين وصل 150! هل تريد الانتقال للمرحلة الثانية؟")) {
+                        currentLevel++;
+                        document.getElementById('currentLevel').textContent = `المستوى ${currentLevel}`;
+
+                        // تغيير لون النيون إلى أحمر
+                        document.querySelectorAll('.challenge-card, .player-card, .leaderboard-item, #currentPlayerBox').forEach(el => {
+                            el.style.boxShadow = "0 0 10px red";
+                            el.style.border = "2px solid red";
+                        });
+
+                        // تحديات المرحلة الثانية
+                        challenges = [
+                            "اعمل فيديو قصير بتغني فيه 🎤",
+                            "قول موقف محرج حصل معاك 🤭",
+                            "اعمل حركة رياضية لمدة 20 ثانية 🏋️‍♂️",
+                            "قول أكتر حاجة بتخاف منها 😱",
+                            "ارقص رقصة مجنونة لمدة دقيقة كاملة 💃",
+                            "جاوب على سؤال صعب بدون تردد ⚡",
+                            "قلد شخصية مشهورة قدام الكل 😂",
+                            "احكي عن سر عمرك ما قلته لحد 🤐",
+                            "اعمل حركة بهلوانية لو تقدر 🤸‍♂️",
+                            "غني أغنية بدون لحن 🎶"
+                        ];
+
+                        goldChallenges = [
+                            "تحدي جولد: اعمل بث مباشر دقيقة ⭐",
+                            "تحدي جولد: قول حاجة تحرج نفسك بيها ⭐",
+                            "تحدي جولد: اركض مكانك 30 ثانية بأقصى سرعة ⭐"
+                        ];
+                    }
+                }, 100);
+            } else if (totalPoints >= 300 && currentLevel === 2) {
+                setTimeout(() => {
+                    if (confirm("مجموع نقاط كل اللاعبين وصل 300! هل تريد الانتقال للمرحلة الثالثة؟")) {
+                        currentLevel++;
+                        document.getElementById('currentLevel').textContent = `المستوى ${currentLevel}`;
+
+                        // تغيير لون النيون إلى جولد
+                        document.querySelectorAll('.challenge-card, .player-card, .leaderboard-item, #currentPlayerBox').forEach(el => {
+                            el.style.boxShadow = "0 0 10px gold";
+                            el.style.border = "2px solid gold";
+                        });
+
+                        // تحديات المرحلة الثالثة
+                        challenges = [
+                            "اتكلم قدام الجميع عن أكثر شيء محرج مر عليك 😅",
+                            "اعمل فيديو وتقليد مشهور وتشاركه مع الموجودين 😂",
+                            "ارقص رقصة مجنونة وسط الغرفة 💃🔥",
+                            "اتصل بصديق وقل له سر غريب عنك 📞🤐",
+                            "قلد صوت شخصية كرتونية مشهورة 🎤",
+                            "جاوب بكل صراحة: أكبر خطأ ارتكبته؟ 🤔",
+                            "غني أغنية بطريقة كوميدية تماماً 😂",
+                            "احكي عن موقف محرج جداً حصل معاك فجأة 😳",
+                            "اعمل تحدي بهلواني صعب أو حاول 🤸‍♂️",
+                            "اتكلم عن أكثر شخص تحبه في حياتك ❤️"
+                        ];
+
+                        goldChallenges = [
+                            "تحدي جولد: قول أصعب سر في حياتك ⭐",
+                            "تحدي جولد: أعمل فيديو بتغني أغنية رومانسية ⭐",
+                            "تحدي جولد: اقلد مشهد من فيلم مشهور ⭐"
+                        ];
+                    }
+                }, 100);
+            } else if (totalPoints >= 380 && currentLevel === 3) {
+                setTimeout(() => {
+                    if (confirm("مجموع نقاط كل اللاعبين وصل 380! هل أنت جاهز للمرحلة الرابعة المجنونة؟ 🚀")) {
+                        currentLevel++;
+                        document.getElementById('currentLevel').textContent = `المستوى ${currentLevel}`;
+
+                        // ألوان نيون متحركة في المرحلة الرابعة
+                        document.querySelectorAll('.challenge-card, .player-card, .leaderboard-item, #currentPlayerBox').forEach(el => {
+                            el.style.animation = "neonPulse 2s infinite alternate";
+                            el.style.border = "2px solid cyan";
+                            el.style.boxShadow = "0 0 20px cyan, 0 0 40px magenta, 0 0 60px yellow";
+                        });
+
+                        // تحديات المرحلة الرابعة
+                        challenges = [
+                            "كل اللاعبين يعملوا رقصة جماعية مضحكة معًا 😂",
+                            "كل اللاعبين يقلدوا أغرب شخصية كرتونية معًا 🎭",
+                            "يعملوا تحدي تمثيل فيلم أكشن مع بعض 🎬",
+                            "يغنوا أغنية مشهورة بطريقة غريبة معًا 🎤",
+                            "يرسموا بعضهم بطريقة مضحكة ويروها للجميع 🎨",
+                            "يعملوا تحدي رياضي جماعي: 10 ضغط + 10 قفزات 🏋️‍♂️",
+                            "كل واحد يمثل خوفه الأكبر 😱",
+                            "عمل إعلان مجنون لمنتج وهمي 🎥",
+                            "الكل يقلد شخصية معروفة بس بأسلوب غريب 😂",
+                            "يرسموا خريطة العالم بدون ما يشوفوا 😅"
+                        ];
+
+                        goldChallenges = [
+                            "تحدي جولد جماعي: يعملوا مشهد تمثيلي لفيلم رعب ⭐",
+                            "تحدي جولد جماعي: يحكوا قصة وهمية مرعبة ⭐",
+                            "تحدي جولد جماعي: يتظاهروا أنهم روبوتات لمدة دقيقة ⭐"
+                        ];
+                    }
+                }, 100);
+            } else if (totalPoints >= 500 && currentLevel === 4) {
+                document.getElementById('finishGameBtn').classList.remove('hidden');
+                setTimeout(() => {
+                    document.getElementById('finishGameBtn').classList.add('hidden');
+                    showFinalGroupChallenge();
+                }, 45000);
+            }
+        }
+
+        function showFinalGroupChallenge() {
+            const challenge = "💥 تحدي نهائي جماعي: كل اللاعبين يجب أن يمثلوا معًا مشهد درامي حزين لمدة دقيقة كاملة مع استخدام مشاعر حقيقية! 💥";
+            document.getElementById('challengeCard').innerText = challenge;
+            players.forEach(player => {
+                player.points += 50;
+            });
+            updatePlayers();
+            setTimeout(() => {
+                showWinners();
+            }, 10000);
+        }
+
+        function showWinners() {
+            players.sort((a, b) => b.points - a.points);
+            const topThree = players.slice(0, 3);
+            let winnersText = "🏆 النتائج النهائية 🏆\n";
+            topThree.forEach((player, index) => {
+                winnersText += `${index + 1}. ${player.name} - ${player.points} نقاط\n`;
+            });
+            alert(winnersText);
+            localStorage.setItem('weeklyChampion', topThree[0].name);
+            localStorage.setItem('weeklyPoints', topThree[0].points);
+            setTimeout(() => {
+                window.location.href = "hall-of-fame.html";
+            }, 3000);
         }
 
         // Theme Functions
